2011-06-20  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Fixed a bug with F10 creating interlaced screenshots instead of
  non-interlaced.


2011-06-17  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.c, DOC/cart.txt: Reverted the last change in the 034M mapping
  regarding switched banks 1 and 2 - on second thought, applying such change
  to a years-old specification without proper discussion is not a good idea.


2011-06-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
*cartridge.c, DOC/cart.txt: Fixed an ages-old bug in the OSS 034M cartridge
  banking scheme. Banks 1 and 2 were switched, which caused all known OSS
  034M dumps to fail. (There actually are only 3 known images of 034M
  cartridges:
  Action! 3.5: http://ftp.pigwa.net/stuff/collections/atari_forever/ROM/ACTION.OSS/ACTION.OSS
  BASIC XL 1.02: http://ftp.pigwa.net/stuff/collections/atari_forever/ROM/BASICXL.OSS/BXL102.OSS
  MAC/65 1.0: http://ftp.pigwa.net/stuff/collections/atari_forever/ROM/MAC65.OSS/MAC65.OSS
  All failed to work before this fix.)
  Additionally the combinations $D5x1 and $D5x5 were incorrectly described as
  working - I've changed it to more closely reflect the reality (the
  combinations cause selection of 2 banks simultaneously - but it's still not
  emulated 100% exactly).

* cartridge.[ch], atari.c, ui.c: Moved the logic that auto-switches machine
  type after insertion of a cartridge. Now it resides in cartridge.c, where it
  belongs. Introduced new function CARTRIDGE_SetType, that should be used to
  change the cartridge's type. CARTRIDGE_IsFor5200 and CARTRIDGE_Start are not
  used outside cartridge.c anymore, so I renamed them and made static.


2011-06-13  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch]: Major rewrite, required to fix bugs in piggyback cartridge
  emulation and with writing/reading savestates with banked cartridges.
  1. SDX piggyback emulation was broken and apparently written without knowing